force-app/main/default/objects/Duplicidade_conta__c/Duplicidade_conta__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuração para determinar para quais tipos de registro que a validação será utilizada</description>
    <label>Duplicidade de conta</label>
</CustomObject>