force-app/main/default/objects/Duplicidade_conta__c/fields/Bluetec__c.field-meta.xml
<CustomField>
    <fullName>Bluetec__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tipo de registro da conta &quot;OTR&quot;</description>
    <inlineHelpText>Ativado para &quot;OTR&quot;</inlineHelpText>
    <label>OTR</label>
    <type>Checkbox</type>
</CustomField>