force-app/main/default/objects/Duplicidade_conta__c/fields/CORP__c.field-meta.xml
<CustomField>
    <fullName>CORP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tipo de registro da conta &quot;CORP&quot;</description>
    <inlineHelpText>Ativado para &quot;CORP&quot;</inlineHelpText>
    <label>CORP</label>
    <type>Checkbox</type>
</CustomField>