force-app/main/default/objects/Duplicidade_conta__c/fields/Grupo_economico__c.field-meta.xml
<CustomField>
    <fullName>Grupo_economico__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tipo de registro da conta &quot;Grupo econômico&quot;</description>
    <inlineHelpText>Ativado para &quot;Grupo econômico&quot;</inlineHelpText>
    <label>Grupo econômico</label>
    <type>Checkbox</type>
</CustomField>