force-app/main/default/objects/Duplicidade_conta__c/fields/Michelin__c.field-meta.xml
<CustomField>
    <fullName>Michelin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tipo de registro da conta &quot;Michelin&quot;</description>
    <inlineHelpText>Ativado para &quot;Michelin&quot;</inlineHelpText>
    <label>Michelin</label>
    <type>Checkbox</type>
</CustomField>