force-app/main/default/objects/Duplicidade_conta__c/fields/SIGGO__c.field-meta.xml
<CustomField>
    <fullName>SIGGO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tipo de registro da conta &quot;SIGGO&quot;</description>
    <inlineHelpText>Ativado para &quot;SIGGO&quot;</inlineHelpText>
    <label>SIGGO</label>
    <type>Checkbox</type>
</CustomField>